--- a/nginx/package_map.jinja
+++ b/nginx/package_map.jinja
@@ -1,7 +1,7 @@
 {% set nginx = salt['grains.filter_by']({
     'Debian': {
         'pkgs': [
-            'git',
+            'mercurial',
             'build-essential',
             'libssl-dev',
             'libpcre3-dev',
@@ -11,7 +11,7 @@
     },
     'RedHat': {
         'pkgs': [
-            'git',
+            'mercurial',
             'gcc',
             'make',
             'openssl-devel',
@@ -22,7 +22,7 @@
     },
     'Arch': {
         'pkgs': [
-            'git',
+            'mercurial',
             'gcc',
             'make',
             'geoip',
